Closed Bug 1341080 Opened 9 years ago Closed 9 years ago

Crash in wrap_strdup | mozilla::Version::Version

Categories

(Core :: JavaScript Engine, defect)

Unspecified
Windows 10
defect
Not set
critical

Tracking

()

RESOLVED FIXED
mozilla54
Tracking Status
firefox52 - fixed
firefox-esr52 --- fixed
firefox53 - fixed
firefox54 --- fixed

People

(Reporter: jujjyl, Assigned: bbouvier)

Details

(Keywords: crash)

Crash Data

Attachments

(1 file)

This bug was filed from the Socorro interface and is report bp-4992537d-b1a6-4e0e-8c58-8846b2170220. ============================================================= FF Nightly crashes on slow script dialog coming up in Wasm.
Occurs somewhat deterministically, another callstack: https://crash-stats.mozilla.com/report/index/81391e44-8780-4b8b-b64c-575182170220
Unfortunately the test case is not public, but can be provided as needed.
D'oh, looks like another case of forgetting filename can be null (and, in this case, calling strdup on filename in DescribeScriptedCaller()).
Attached patch fix.patchSplinter Review
The hardest was to make a test case.
Assignee: nobody → bbouvier
Status: NEW → ASSIGNED
Attachment #8839237 - Flags: review?(luke)
Comment on attachment 8839237 [details] [diff] [review] fix.patch Review of attachment 8839237 [details] [diff] [review]: ----------------------------------------------------------------- Wow, that was fast, thanks!
Attachment #8839237 - Flags: review?(luke) → review+
Pushed by bbouvier@mozilla.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/4bccce8de17e Provide an empty filename if the wasm caller doesn't have one in DescribeScriptedCaller; r=luke
This seems to repro pretty easily for slow-script-dialog on Aurora/Beta, so it'd be good to uplift.
Comment on attachment 8839237 [details] [diff] [review] fix.patch Approval Request Comment [Feature/Bug causing the regression]: wasm [User impact if declined]: crashes in slow script dialog [Is this code covered by automated tests?]: yes [Has the fix been verified in Nightly?]: yes (landed this morning and tests passed) [Needs manual test from QE? If yes, steps to reproduce]: n/a [List of other uplifts needed for the feature/fix]: n/a [Is the change risky?]: not much [Why is the change risky/not risky?]: conservative change, one-line of code [String changes made/needed]: n/a
Attachment #8839237 - Flags: approval-mozilla-beta?
Attachment #8839237 - Flags: approval-mozilla-aurora?
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla54
Track 53- as the volume of crashes is low.
Comment on attachment 8839237 [details] [diff] [review] fix.patch Fix a crash related to wasm and also include a test. Aurora53+.
Attachment #8839237 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Comment on attachment 8839237 [details] [diff] [review] fix.patch wasm crash fix for beta52 Should be in 52.0b9
Attachment #8839237 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: