Bug 1341080: Provide an empty filename if the wasm caller doesn't have one in DescribeScriptedCaller; r=luke a=gchang

MozReview-Commit-ID: 8h0NbN7jOBq

--HG--
extra : source : 4bccce8de17eda58afc4fb931685699685cf9258